# traylinx-cli

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  release.yml  update-homebrew.yml
docs/: ARCHITECTURE.md  COMMAND_REFERENCE.md  SETUP_GUIDE.md  implement.md
tests/: __init__.py  test_context.py  test_manifest.py  test_mcp.py  test_security.py
traylinx/: __init__.py  __main__.py  auth.py  branding.py  cli.py  constants.py  context.py  plugins.py
traylinx/api/: __init__.py  registry.py
traylinx/commands/: __init__.py  assets.py  auth.py  chat_cmd.py  cortex_cmd.py  docker_cmd.py  help.py  init.py  mcp_cmd.py  open_cmd.py  orgs.py  plugin.py  projects.py  publish.py  sessions_cmd.py  stargate.py  status.py  validate.py
traylinx/context/: __init__.py  compaction.py  organization.py  project.py
traylinx/mcp/: __init__.py  client.py  models.py  registry.py  transports.py
traylinx/models/: __init__.py  manifest.py
traylinx/security/: __init__.py  docker_safeguards.py  path_validator.py  policy.py  shell_parser.py
traylinx/templates/basic/: Dockerfile  README.md.j2  pyproject.toml.j2  traylinx-agent.yaml.j2
traylinx/templates/basic/app/: __init__.py.j2  main.py.j2
traylinx/tui/: __init__.py  app.py  chat.py  logs.py  status.py
traylinx/utils/: __init__.py  config.py  docker.py  registry.py  session_logger.py
