[project]
name = "traylinx-cli"
version = "0.3.0"
description = "CLI for the Traylinx Agent Network - Create, validate, and publish agents"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Traylinx", email = "dev@traylinx.com"}
]
keywords = ["traylinx", "agents", "ai", "cli", "a2a"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "typer>=0.12.0",
    "httpx>=0.27.0",
    "pydantic>=2.5.0",
    "pyyaml>=6.0.0",
    "jinja2>=3.1.0",
    "rich>=13.0.0",
    "email-validator>=2.0.0",
    "inquirerpy>=0.3.4",
    "textual>=0.52.0",
    "mcp>=1.1.0",
    "traylinx-stargate @ git+https://github.com/traylinx/traylinx-stargate.git@main",
]

[project.scripts]
traylinx = "traylinx.cli:app"
tx = "traylinx.cli:app"

[project.urls]
Homepage = "https://traylinx.com"
Documentation = "https://docs.traylinx.com/cli"
Repository = "https://github.com/traylinx/traylinx-cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["traylinx"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501", "B008", "B904"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
